| Bug #57897 | Incorrect handling of version of schema-transaction entries in P0.SchemaLog | ||
|---|---|---|---|
| Submitted: | 1 Nov 2010 14:20 | Modified: | 5 Nov 2010 22:02 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[1 Nov 2010 14:20]
Jonas Oreland
[1 Nov 2010 15:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122447 3911 jonas oreland 2010-11-01 ndb - bug#57897 - don't randomize version in schema-trans-entry
[1 Nov 2010 16:16]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:jonas@mysql.com-20101101161110-luebipotbx2zhel5) (version source revid:jonas@mysql.com-20101101154344-xm3v4twlv3k2rjvg) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[1 Nov 2010 16:51]
Jonas Oreland
pushed to 7.0.20 and 7.1.9
[5 Nov 2010 22:02]
Jon Stephens
Documented in the NDB-7.0.20 and 7.1.9 changelogs as follows:
The method for calculating table schema versions used by
SchemaTransaction did not match the calculation method for schemas
used in the P0.SchemaLog file.
Closed.
