ndb - bug#57897 - don't randomize version in schema-trans-entry